--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
-node_modules
+# Dependências
+/node_modules
 
-webpack.config.js
+# Arquivos de build
+/dist
+/build
+/out
+
+# Arquivos de configuração
+/.vscode
+/.idea
+
+# Arquivos de ambiente
+.env
+.env.local
+.env.*.local
+
+# Logs e arquivos temporários
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Arquivos de compilação TypeScript
+*.js
+*.js.map
+
+# Arquivos de configuração específicos do editor
+/.vscode
+.idea
+
+# Outros arquivos temporários ou gerados durante o desenvolvimento
+.DS_Store
+Thumbs.db
+
+# Arquivo de configuração do webpack 
+/webpack.config.js
